# docker-react-python-postgres

./: compose.yaml
backend/: pyproject.toml
backend/src/: fizzbuzz.py
backend/tests/: test_fizzbuzz.py
docker/backend/.devcontainer/: devcontainer.json
