[tool.poetry]
name = "jira-api"
version = "0.1.0"
description = ""
authors = ["Riki"]

[tool.poetry.dependencies]
python = "3.11.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
mypy = "^1.10.0"
pydantic = "^2.7.2"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
coverage = "^7.5.3"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
select = [
    "E",    # pycodestyle error
    "F",    # Pyflakes
    "W",    # pycodestyle warning
    "I",    # isort
    "DJ",   # flake8-django
    "B",    # flake8-bugbear
    "N"     # pep8-naming
]
ignore = ["E501", "D203", "D212", "D400", "D415"]
fixable = ["ALL"]
exclude = [
    ".ruff_cache",
    ".pytest_cache",
    ".mypy_cache",
    "__pycache__",
    "__pypackages__",
]
line-length = 180
indent-width = 4

[tool.mypy]
ignore_missing_imports = true  # インポートが見つからない場合にエラーを無視
show_error_context = true      # エラーの前後の文脈情報を表示
show_column_numbers = true     # エラーの発生位置として、行番号に加えて列番号も表示
disallow_untyped_defs = true   # 型注釈のない関数定義を禁止
no_implicit_optional = true    # デフォルトでNoneを許可する型注釈を禁止
warn_return_any = true         # 関数の戻り値の型がAnyである場合に警告を表示
check_untyped_defs = true      # 型注釈のない関数も型チェックの対象とする
exclude = [
    ".ruff_cache/",
    ".pytest_cache/",
    ".mypy_cache/",
    "__pycache__",
    "__pypackages__",
]

[tool.taskipy.tasks]
test = "pytest -v tests"                                                   # 通常のテスト
test-cov-c0 = "pytest --cov -v tests"                                      # C0カバレッジ
test-cov-c1 = "pytest --cov --cov-branch -v tests"                         # C1カバレッジ
test-cov-c0-html = "pytest --cov --cov-report=html -v tests"               # C0カバレッジHTML出力
test-cov-c1-html = "pytest --cov --cov-branch --cov-report=html -v tests"  # C1カバレッジHTML出力
